Fixed wrong color HEX separator in Colors.css

--- a/CSS/Styler CSS/Colors.css
+++ b/CSS/Styler CSS/Colors.css
@@ -21,7 +21,7 @@ body {
 	--dark-brown-color: #261804;
 	--pink-color: #ff0080;
 	--dark-pink-color: #440b28;
-	--purple-color: $9425a7;
+	--purple-color: #9425a7;
 }
 
 .border_1px_solid_grey {
